Made the Popular this week to have a card shadow visible from top to bottom and fixed the colors and alignment of the hero section elements

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -91,9 +91,10 @@
 .statsWrap {
   margin-top: 44px;
   display: flex;
-  align-items: center;
+  align-items: start;
+  flex-direction: column;
   gap: 32px;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
 }
 
 .statsBar {
@@ -163,7 +164,7 @@
   border: 1px solid var(--color-border);
   border-radius: var(--radius-lg);
   overflow: hidden;
-  box-shadow: 0 30px 80px -30px #4824ff66;
+  /* box-shadow: 0 30px 80px -30px #4221e966; */
 }
 
 .artwork {
@@ -178,16 +179,17 @@
 .bidInfo {
   position: relative;
   z-index: 1;
-  padding: 10px 10px 20px;
-  background: linear-gradient(to top, #412b92d9 0%, #4d2aff99 45%, #4d6bff1a 100%);
+  padding: 10px 10px 5px;
+  background: linear-gradient(135deg, #5704ddb8 0%, #3e9ad684 100%);
   /* backdrop-filter: blur(6px); */
-  -webkit-backdrop-filter: blur(6px);
+  /* -webkit-backdrop-filter: blur(6px); */
 }
 
 .bidRow {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  padding: 0px 20px;
 }
 
 .bidLabel {
@@ -204,9 +206,25 @@
   text-shadow: 0 1px 6px #000000b3;
 }
 
+.bidLabel2 {
+  font-size: 0.8rem;
+  color: var(--color-text-muted);
+  margin-bottom: 4px;
+  text-shadow: 0 1px 6px #000000b3;
+  text-align: end;
+}
+
+.bidValue2 {
+  font-family: var(--font-heading);
+  font-weight: 700;
+  font-size: 1.15rem;
+  text-shadow: 0 1px 6px #000000b3;
+  text-align: end;
+}
+
 .bidActions {
   display: flex;
-  gap: 14px;
+  gap: 10rem;
 }
 
 .bidActions > * {
